Corrected Social Icon Spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,7 +97,7 @@ body, html {
   color: #000;
   padding-top: 12px;
   text-decoration: none;
-  width: 120px;b
+  width: 140px;
   font-family: 'Josefin Sans', sans-serif;
   text-align: center;
   overflow: hidden;
